# Boilerplate

./: .travis.yml  CMakeLists.txt
include/: System.h
src/: System.cc  System.cpp
